--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
             -->
 
   <div class="col-xl-7 pl-0 pl-lg-5 pr-lg-1 d-flex align-items-stretch">
-    <div class="col-lg-5">
+    <div class="col-lg-5 col-sm-6">
       <i class="bx bx-help-circle"></i>
       <h2>We have two
         services options for
         your company</h2>
     </div>
-    <div class="col-lg-7">
+    <div class="col-lg-7 col-sm-6">
       <i class="bx bx-help-circle"></i>
       <h3>ABI Package Development </h3>
       <p>
@@ -121,7 +121,7 @@
       </p>
       <a class="btn btn-primary active btn-dark btn-lg" href="#" role="button">Learn more</a>
     </div>
-    <div class="col-lg-7">
+    <div class="col-lg-7 col-sm-6">
       <i class="bx bx-help-circle"></i>
       <h3>ABI Services </h3>
       <p>
