--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 </body>
 
 <footer>
-  <div class="jumbotron jumbotron-fluid h-100 ">
+  <div class="jumbotron jumbotron-fluid h-50 ">
     <div class="row">
       <div class="col w-50 text-center col-lg-5 ">
         <a href="index.html"><img src="assets/images/Logo_arkana_bi.png" width="200" height="100" alt=""></a>
@@ -170,7 +170,7 @@
       </div>
     
     <div class="copyright">
-      <div class="col-md-8 col-sm-6"
+      <div class="col-md-8 col-sm-6">
       &copy; Copyright <strong><span>ArkanaBI</span></strong>. All Rights Reserved
     
     <div class="credits">
