--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light logo">
-    <a href="#" class="navbar-brand ">
-      <img src="/assets/images/Logo_arkana_bi.png" width="200" height="75" class="d-inline-block align-top" alt="">
+    <a  class="navbar-brand"
+      href="index.html"><img src="assets/images/Logo_arkana_bi.png" width="200" height="100" alt=""
+      class="navbar-brand">
     </a>
     <ul class="ml-auto navbar-nav ">
       <li class="nav-item"><a class="nav-link mx-3" href="#">Menu 1</a></li>
