--- a/index.html
+++ b/index.html
@@ -23,19 +23,25 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light logo">
-    <a  class="navbar-brand"
-      href="index.html"><img src="assets/images/Logo_arkana_bi.png" width="200" height="100" alt=""
+  <header id='header'>
+    <div class="container d-flex">
+      <div class="logo mr-auto">
+        <nav class="navbar navbar-expand-lg navbar-light logo"> 
+    <a href="index.html"><img src="assets/images/Logo_arkana_bi.png" width="200" height="100" alt=""
       class="navbar-brand">
     </a>
+    <div>
+      <nav class="navbar navbar-expand-lg navbar-light logo">
     <ul class="ml-auto navbar-nav ">
       <li class="nav-item"><a class="nav-link mx-3" href="#">Menu 1</a></li>
       <li class="nav-item"><a class="nav-link mx-3" href="#">Menu 2</a></li>
       <li class="nav-item"><a class="nav-link mx-3" href="#">Menu 3</a></li>
       <li class="nav-item"><a class="nav-link mx-3" href="#">Menu 3</a></li>
-      <button type="button" class="btn btn-outline-dark">Dark</button>
-    </ul>
-  </nav>
+      <button type="button" class="btn btn-outline-dark" href="index.html" >GO</button>
+    </ul></nav>
+  </div>
+
+</header>
 
 
   <div class="jumbotron jumbotron-fluid h-50 ">
