--- a/index.html
+++ b/index.html
@@ -23,25 +23,24 @@
 </head>
 
 <body>
-  <header id='header'>
-    <div class="container d-flex">
-      <div class="logo mr-auto">
-        <nav class="navbar navbar-expand-lg navbar-light logo"> 
-    <a href="index.html"><img src="assets/images/Logo_arkana_bi.png" width="200" height="100" alt=""
-      class="navbar-brand">
-    </a>
-    <div>
-      <nav class="navbar navbar-expand-lg navbar-light logo">
-    <ul class="ml-auto navbar-nav ">
-      <li class="nav-item"><a class="nav-link mx-3" href="#">Menu 1</a></li>
-      <li class="nav-item"><a class="nav-link mx-3" href="#">Menu 2</a></li>
-      <li class="nav-item"><a class="nav-link mx-3" href="#">Menu 3</a></li>
-      <li class="nav-item"><a class="nav-link mx-3" href="#">Menu 3</a></li>
-      <button type="button" class="btn btn-outline-dark" href="index.html" >GO</button>
-    </ul></nav>
-  </div>
-
-</header>
+  <header id="header">
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+      <a href="index.html" class="navbar-brand" ><img src="assets/images/Logo_arkana_bi.png" width="200" height="100" alt=""
+        ></a>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarmenu">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarmenu">
+        <ul class="ml-auto navbar-nav ">
+          <li class="nav-item"><a class="nav-link mx-3" href="#">Menu 1</a></li>
+          <li class="nav-item"><a class="nav-link mx-3" href="#">Menu 2</a></li>
+          <li class="nav-item"><a class="nav-link mx-3" href="#">Menu 3</a></li>
+          <li class="nav-item"><a class="nav-link mx-3" href="#">Menu 3</a></li>
+          <button type="button" class="btn btn-outline-dark" href="index.html">GO</button>
+        </ul> 
+      </div>
+    </nav>
+  </header>
 
 
   <div class="jumbotron jumbotron-fluid h-50 ">
